@@ -79,6 +79,9 @@
   <input type="text" />
 </form>
 
+<form id="form_empty">
+</form>
+
 <!-- tabindexed forms -->
 <div id="tabindex">
   <form id="ffe">
