@@ -1,3 +1,5 @@
+* Ensure Form#focusFirstElement skips Form.Element#activate if there is no first element. [Alexander Chernin, kangax]
+
 * Rename confusing variables in Form.Element.Serializers.select(). [#180 state:resolved] [jddalton]
 
 * Rewrite document.viewport methods getDimensions, getWidth, and getHeight to avoid browser sniffs, increase speed, and fix Opera 9.5 support. [#337 state:resolved] [jddalton, Nick Stakenburg]
